# ocr_v2

./: .clang-format  .gitignore  CMakeLists.txt
lib/misc/matrix/: lib-matrix.cc  lib-matrix.hh  matrix.cc  matrix.hh
lib/misc/random/: uniform-random.hh  uniform-random.hxx
lib/misc/singleton/: singleton.hh  singleton.hxx
lib/neural_network/: neural-network.cc  neural-network.hh
lib/neural_network/activation_function/: activation-function.hh  activation-function.hxx  sigmoid-function.hh  sigmoid-function.hxx  simple-activation-function.hh  simple-activation-function.hxx  softmax-function.hh  softmax-function.hxx
lib/neural_network/layer/: fully-connected-layer.cc  fully-connected-layer.hh  layer.hh  layer.hxx
src/: main.cc
tests/unit_tests/: lib-matrix.cc  lib-random.cc  lib-singleton.cc  main.cc
